--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="prueba-contenido">
                     <h2 class="prueba-titulo">Comprensión de lectura</h2>
                     <p class="prueba-descripcion">Evalúa tu capacidad para entender textos escritos en español.</p>
-                    <a href="../pages/lectora.html" class="prueba-boton">Realizar prueba</a>
+                    <a href="lectora.html" class="prueba-boton">Realizar prueba</a>
                 </div>
             </div>
 
@@ -113,7 +113,7 @@
                 <div class="prueba-contenido">
                     <h2 class="prueba-titulo">Comprensión auditiva</h2>
                     <p class="prueba-descripcion">Demuestra tu habilidad para comprender el español hablado.</p>
-                    <a href="../pages/auditiva.html" class="prueba-boton">Realizar prueba</a>
+                    <a href="auditiva.html" class="prueba-boton">Realizar prueba</a>
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
                 <div class="prueba-contenido">
                     <h2 class="prueba-titulo">Expresión escrita</h2>
                     <p class="prueba-descripcion">Muestra tu capacidad para escribir en español.</p>
-                    <a href="../pages/escrita.html" class="prueba-boton">Realizar prueba</a>
+                    <a href="escrita.html" class="prueba-boton">Realizar prueba</a>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                 <div class="prueba-contenido">
                     <h2 class="prueba-titulo">Expresión oral</h2>
                     <p class="prueba-descripcion">Demuestra tu habilidad para comunicarte oralmente en español.</p>
-                    <a href="../pages/hablar.html" class="prueba-boton">Realizar prueba</a>
+                    <a href="hablar.html" class="prueba-boton">Realizar prueba</a>
                 </div>
             </div>
         </div>
